Working multi-threaded asset loading, catching json parsing errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,7 +91,8 @@
         "xmemory0": "cpp",
         "xxatomic": "cpp",
         "variant": "cpp",
-        "format": "cpp"
+        "format": "cpp",
+        "resumable": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
