--- a/Extern/CMakeLists.txt
+++ b/Extern/CMakeLists.txt
@@ -2,6 +2,7 @@
 include(FetchContent)
 
 # Submodule libraries
+option(CLI11_BUILD_TESTS "Build CLI11 tests" OFF)
 add_subdirectory(CLI11)
 add_subdirectory(EABase)
 add_subdirectory(fmt)
@@ -9,9 +10,9 @@ add_subdirectory(glm)
 add_subdirectory(SparseMap)
 add_subdirectory(RobinMap)
 add_subdirectory(Taskflow)
-
 option(SPDLOG_FMT_EXTERNAL "Use external fmt library instead of bundled" ON)
 add_subdirectory(spdlog)
+option(JSON_BuildTests "Build the unit tests when BUILD_TESTING is enabled." OFF)
 add_subdirectory(nlohmann_json)
 
 # TRACY
