Tracy and EASTL compile with C++17, linux fixes

--- a/Extern/CMakeLists.txt
+++ b/Extern/CMakeLists.txt
@@ -19,7 +19,7 @@ add_subdirectory(nlohmann_json)
 add_library(Tracy STATIC)
 target_include_directories(Tracy PUBLIC Tracy)
 target_sources(Tracy PRIVATE Tracy/TracyClient.cpp)
-target_compile_features(Tracy PUBLIC cxx_std_17)
+set_property(TARGET Tracy PROPERTY CXX_STANDARD 17)
 if(LINUX)
     find_library(DLPATH dl)
     target_link_libraries(Tracy PRIVATE ${DLPATH})
@@ -30,6 +30,7 @@ file(GLOB_RECURSE EASTL_SOURCES CONFIGURE_DEPENDS EASTL/source/*.cpp)
 add_library(EASTL STATIC ${EASTL_SOURCES})
 target_include_directories(EASTL PUBLIC EASTL/include)
 target_link_libraries(EASTL EABase)
+set_property(TARGET EASTL PROPERTY CXX_STANDARD 17)
 
 
 if(WINDOWS)
