--- a/Libs/Core/CMakeLists.txt
+++ b/Libs/Core/CMakeLists.txt
@@ -1,14 +1,15 @@
 
 file(GLOB_RECURSE CORE_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
 
-add_library(Core STATIC ${CORE_SOURCE_FILES})
+add_library(Core STATIC)
 target_include_directories(Core PUBLIC Include)
+target_sources(Core PRIVATE ${CORE_SOURCE_FILES})
 set_property(TARGET Core PROPERTY CXX_STANDARD 17)
 target_define_platform(Core)
 
 target_link_libraries(Core PUBLIC
     EASTL
-    CONAN_PKG::date
+    date::date
     nlohmann_json
     glm::glm_static
     Tracy
