General framework changes & first c code generation
- Simplified profiling API & added sources to Tracy
- Improved filesystem checks
- First C code generation
- Implemented FormatTo
- Optimized String functions

--- a/Extern/CMakeLists.txt
+++ b/Extern/CMakeLists.txt
@@ -46,9 +46,10 @@ set_property(TARGET imgui PROPERTY CXX_STANDARD 17)
 
 
 # TRACY
+file(GLOB_RECURSE TRACY_SOURCES CONFIGURE_DEPENDS Tracy/TracyClient.cpp Tracy/client/*.cpp Tracy/common/*.cpp)
 add_library(Tracy STATIC)
 target_include_directories(Tracy PUBLIC Tracy)
-target_sources(Tracy PRIVATE Tracy/TracyClient.cpp)
+target_sources(Tracy PRIVATE ${TRACY_SOURCES})
 set_property(TARGET Tracy PROPERTY CXX_STANDARD 17)
 if(LINUX)
     find_library(DLPATH dl)
