--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,7 +92,9 @@
         "xxatomic": "cpp",
         "variant": "cpp",
         "format": "cpp",
-        "resumable": "cpp"
+        "resumable": "cpp",
+        "bitset": "cpp",
+        "codecvt": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
