--- a/Libs/Core/CMakeLists.txt
+++ b/Libs/Core/CMakeLists.txt
@@ -18,7 +18,7 @@ target_link_libraries(Core PUBLIC
     Taskflow
     fmt
     robin_hood
-    rpmalloc
+    #rpmalloc
 )
 target_link_libraries(Core PRIVATE
     spdlog
