--- a/Extern/CMakeLists.txt
+++ b/Extern/CMakeLists.txt
@@ -64,9 +64,13 @@ endif()
 if(WINDOWS)
     target_compile_definitions(Tracy PRIVATE _WIN32=1)
 elseif(LINUX)
-    target_compile_definitions(Tracy PRIVATE __linux__=1)
+    target_compile_definitions(Tracy PRIVATE __linux__=1 TRACY_TIMER_QPC=1)
 endif()
 
 if(VCLANG_ENABLE_PROFILER)
     target_compile_definitions(Tracy PUBLIC TRACY_ENABLE=1)
 endif()
+
+# Bandit (Tests)
+add_library(Bandit INTERFACE)
+target_include_directories(Bandit INTERFACE Bandit)
