Readed dl for tracy on linux

--- a/Extern/CMakeLists.txt
+++ b/Extern/CMakeLists.txt
@@ -59,6 +59,11 @@ target_sources(Tracy PRIVATE ${TRACY_SOURCES})
 set(TRACY_ENABLE ${RIFT_ENABLE_PROFILER})
 target_compile_definitions(Tracy PUBLIC TRACY_ENABLE)
 target_compile_definitions(Tracy PRIVATE _CRT_SECURE_NO_WARNINGS)
+if(LINUX)
+    find_library(DLPATH dl)
+    target_link_libraries(Tracy PRIVATE ${DLPATH})
+    # target_compile_definitions(Tracy PRIVATE TRACY_TIMER_QPC=1)
+endif()
 
 # Bandit (Tests)
 add_library(Bandit INTERFACE)
