--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -38,7 +38,7 @@ jobs:
         uses: lukka/get-cmake@latest
 
       - name: Set compiler to ${{ matrix.cxx }}
-      - uses: lukka/set-shell-env@v1
+        uses: lukka/set-shell-env@v1
         with:
           CXX: ${{ matrix.cxx }}
           CC: ${{ matrix.cc }}
