--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,10 +23,10 @@ jobs:
             os: ubuntu-20.04
             cxx: g++
             cc: gcc
-          - name: macos-clang
-            os: macos-latest
-            cxx: clang++
-            cc: clang
+          #- name: macos-clang
+          #  os: macos-latest
+          #  cxx: clang++
+          #  cc: clang
 
     steps:
       - name: Checkout repository
