--- a/.gitmodules
+++ b/.gitmodules
@@ -47,5 +47,5 @@
 	path = Extern/Bandit
 	url = https://github.com/banditcpp/bandit
 [submodule "rift-core"]
-	path = rift-core
+	path = Libs/Core
 	url = https://github.com/PipeRift/rift-core.git
