Renamed exe files

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -80,4 +80,4 @@ jobs:
           path: ${{ runner.workspace }}
 
       - name: Run tests
-        run: 'Debug/Tests.exe --report-timing --reporter=spec'
+        run: 'call Debug/Tests.exe --report-timing --reporter=spec'
