--- a/Apps/CLI/CMakeLists.txt
+++ b/Apps/CLI/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 add_executable(CLI Src/main.cpp)
-set_target_properties(CLI PROPERTIES OUTPUT_NAME "Rift_CLI")
+set_target_properties(CLI PROPERTIES OUTPUT_NAME "Rift")
 target_include_directories(CLI PUBLIC Include)
 set_property(TARGET CLI PROPERTY CXX_STANDARD 17)
 target_link_libraries(CLI PUBLIC ${PROJECT_NAME} CLI11)
