--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -83,4 +83,4 @@ jobs:
           path: ${{ runner.workspace }}
 
       - name: Run tests
-        run: 'Tests.exe --report-timing --reporter=spec'
+        run: 'Debug/Tests.exe --report-timing --reporter=spec'
