--- a/.gitmodules
+++ b/.gitmodules
@@ -37,12 +37,12 @@
 [submodule "Extern/robin_hood"]
 	path = Extern/robin_hood
 	url = https://github.com/martinus/robin-hood-hashing
-[submodule "Extern/rpmalloc"]
-	path = Extern/rpmalloc
-	url = https://github.com/mjansson/rpmalloc.git
 [submodule "Extern/memory"]
 	path = Extern/memory
 	url = https://github.com/foonathan/memory.git
 [submodule "Extern/Bandit"]
 	path = Extern/Bandit
 	url = https://github.com/banditcpp/bandit
+[submodule "Extern/mimalloc"]
+	path = Extern/mimalloc
+	url = https://github.com/microsoft/mimalloc.git
