--- a/Libs/Framework/CMakeLists.txt
+++ b/Libs/Framework/CMakeLists.txt
@@ -4,12 +4,10 @@ file(GLOB_RECURSE FRAMEWORK_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
 add_library(${PROJECT_NAME} STATIC)
 target_include_directories(${PROJECT_NAME} PUBLIC Include)
 target_sources(${PROJECT_NAME} PRIVATE ${FRAMEWORK_SOURCE_FILES})
-set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
-target_define_platform(${PROJECT_NAME})
-
-target_link_libraries(${PROJECT_NAME} PUBLIC Core)
-
-target_shared_output_directory(${PROJECT_NAME})
+set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
+rift_target_define_platform(${PROJECT_NAME})
+rift_target_shared_output_directory(${PROJECT_NAME})
+target_link_libraries(${PROJECT_NAME} PUBLIC rift::core)
 
 install(TARGETS ${PROJECT_NAME}
     EXPORT RiftTargets
