--- a/Apps/CLI/CMakeLists.txt
+++ b/Apps/CLI/CMakeLists.txt
@@ -2,6 +2,8 @@
 add_executable(CLI Src/main.cpp)
 set_target_properties(CLI PROPERTIES OUTPUT_NAME "Rift")
 target_include_directories(CLI PUBLIC Include)
+file(GLOB_RECURSE CLI_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
+target_sources(CLI PRIVATE ${CLI_SOURCE_FILES})
 set_property(TARGET CLI PROPERTY CXX_STANDARD 20)
 target_link_libraries(CLI PUBLIC ${PROJECT_NAME} CLI11)
 rift_target_define_platform(CLI)
