--- a/Apps/Editor/CMakeLists.txt
+++ b/Apps/Editor/CMakeLists.txt
@@ -2,8 +2,10 @@
 add_executable(Editor Src/main.cpp)
 set_target_properties(Editor PROPERTIES OUTPUT_NAME "RiftEditor")
 target_include_directories(Editor PUBLIC Include)
+file(GLOB_RECURSE EDITOR_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
+target_sources(Editor PRIVATE ${EDITOR_SOURCE_FILES})
 set_property(TARGET Editor PROPERTY CXX_STANDARD 20)
-target_link_libraries(Editor PUBLIC ${PROJECT_NAME} imgui)
+target_link_libraries(Editor PUBLIC ${PROJECT_NAME} sokol imgui)
 rift_target_define_platform(Editor)
 rift_target_shared_output_directory(Editor)
 
