--- a/Libs/Framework/CMakeLists.txt
+++ b/Libs/Framework/CMakeLists.txt
@@ -5,6 +5,10 @@ add_library(${PROJECT_NAME} STATIC)
 target_include_directories(${PROJECT_NAME} PUBLIC Include)
 target_sources(${PROJECT_NAME} PRIVATE ${FRAMEWORK_SOURCE_FILES})
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
+set_target_properties (${PROJECT_NAME} PROPERTIES
+    CXX_STANDARD 20
+    FOLDER Rift
+)
 rift_target_define_platform(${PROJECT_NAME})
 rift_target_shared_output_directory(${PROJECT_NAME})
 target_link_libraries(${PROJECT_NAME} PUBLIC rift::core)
