--- a/Apps/Editor/CMakeLists.txt
+++ b/Apps/Editor/CMakeLists.txt
@@ -1,18 +1,18 @@
 
-add_executable(Editor Src/main.cpp)
-set_target_properties(Editor PROPERTIES OUTPUT_NAME "RiftEditor")
-target_include_directories(Editor PUBLIC Include)
-file(GLOB_RECURSE EDITOR_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
-target_sources(Editor PRIVATE ${EDITOR_SOURCE_FILES})
-set_target_properties (Editor PROPERTIES
+add_executable(RiftEditor Src/main.cpp)
+add_executable(Rift::Editor ALIAS RiftEditor)
+target_include_directories(RiftEditor PUBLIC Include)
+file(GLOB_RECURSE RiftEditor_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
+target_sources(RiftEditor PRIVATE ${RiftEditor_SOURCE_FILES})
+set_target_properties (RiftEditor PROPERTIES
     CXX_STANDARD 20
     FOLDER Rift
 )
-target_link_libraries(Editor PUBLIC ${PROJECT_NAME} sokol imgui)
-rift_target_define_platform(Editor)
-rift_target_shared_output_directory(Editor)
+target_link_libraries(RiftEditor PUBLIC Rift::Rift sokol imgui)
+rift_target_define_platform(RiftEditor)
+rift_target_shared_output_directory(RiftEditor)
 
-install(TARGETS Editor
+install(TARGETS RiftEditor
     EXPORT RiftTargets
     LIBRARY DESTINATION Lib
     ARCHIVE DESTINATION Lib
