--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,39 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Launch",
             "type": "cppvsdbg",
             "request": "launch",
             "program": "${command:cmake.launchTargetPath}",
             "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/Project",
+            "environment": [],
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Test Core",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "../Build/Bin/RiftCoreTests.exe",
+            "args": [
+                "--reporter=spec"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/Project",
+            "environment": [],
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Test Rift",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "../Build/Bin/RiftTests.exe",
+            "args": [
+                "--reporter=spec"
+            ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/Project",
             "environment": [],
