--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,14 @@ endif()
 include(CMake/CheckClangTools.cmake)
 
 # Additional targets to perform clang-format/clang-tidy
-file(GLOB_RECURSE ALL_SOURCE_FILES CONFIGURE_DEPENDS Apps/**/*.cpp Apps/**/*.h Libs/**/*.cpp Libs/**/*.h)
+file(GLOB_RECURSE ALL_SOURCE_FILES CONFIGURE_DEPENDS
+    Apps/**/*.cpp Apps/**/*.h
+    Libs/Framework/**/*.cpp Libs/Framework/**/*.h
+    Libs/Core/Include/**/*.cpp Libs/Core/Include/**/*.h
+    Libs/Core/Source/**/*.cpp Libs/Core/Source/**/*.h
+    Libs/Core/Tests/**/*.cpp Libs/Core/Tests/**/*.h
+    Tests/**/*.cpp Tests/**/*.h
+)
 
 if(CLANG_FORMAT_EXE)
     add_custom_target(ClangFormat COMMAND ${CLANG_FORMAT_EXE} -i ${ALL_SOURCE_FILES})
